import { render, screen, fireEvent } from '@testing-library/react';
import { describe, it, expect, vi } from 'vitest';
import { SearchUserSuggestion } from './SearchUserSuggestion';
import type { Pubky } from '@/core';

vi.mock('@/atoms', () => ({
  Container: ({
    children,
    className,
    onClick,
    ...props
  }: React.PropsWithChildren<{ className?: string; onClick?: () => void }>) => (
    <div className={className} onClick={onClick} {...props}>
      {children}
    </div>
  ),
  Typography: ({
    children,
    className,
    as: Component = 'span',
    ...props
  }: React.PropsWithChildren<{ className?: string; as?: React.ElementType }>) => (
    <Component className={className} {...props}>
      {children}
    </Component>
  ),
}));

vi.mock('@/molecules', () => ({
  AvatarWithFallback: ({ name, size }: { name: string; avatarUrl?: string; size: string }) => (
    <div data-testid="avatar" data-name={name} data-size={size}>
      Avatar
    </div>
  ),
}));

vi.mock('@/libs', () => ({
  formatPublicKey: ({ key, length }: { key: string; length: number }) => `${key.slice(0, length)}...`,
  truncateString: (str: string, maxLength: number) => {
    if (!str) return '';
    if (str.length <= maxLength) return str;
    return `${str.slice(0, maxLength)}...`;
  },
}));

describe('SearchUserSuggestion', () => {
  const mockUser = {
    id: 'pk:abc123def456' as Pubky,
    name: 'John Doe',
    avatarUrl: 'https://example.com/avatar.jpg',
  };

  it('renders user name', () => {
    render(<SearchUserSuggestion user={mockUser} />);

    expect(screen.getByTestId('user-name')).toHaveTextContent('John Doe');
  });

  it('renders formatted pubky', () => {
    render(<SearchUserSuggestion user={mockUser} />);

    expect(screen.getByTestId('user-pubky')).toHaveTextContent('@pk:abc12...');
  });

  it('renders avatar with correct props', () => {
    render(<SearchUserSuggestion user={mockUser} />);

    const avatar = screen.getByTestId('avatar');
    expect(avatar).toHaveAttribute('data-name', 'John Doe');
    expect(avatar).toHaveAttribute('data-size', 'default');
  });

  it('calls onClick when clicked', () => {
    const onClick = vi.fn();
    render(<SearchUserSuggestion user={mockUser} onClick={onClick} />);

    fireEvent.click(screen.getByTestId(`search-user-suggestion-${mockUser.id}`));

    expect(onClick).toHaveBeenCalledWith(mockUser.id);
  });

  it('does not throw when onClick is not provided', () => {
    render(<SearchUserSuggestion user={mockUser} />);

    expect(() => {
      fireEvent.click(screen.getByTestId(`search-user-suggestion-${mockUser.id}`));
    }).not.toThrow();
  });

  it('renders user without avatar url', () => {
    const userWithoutAvatar = {
      id: 'pk:xyz789' as Pubky,
      name: 'Jane Doe',
    };

    render(<SearchUserSuggestion user={userWithoutAvatar} />);

    expect(screen.getByTestId('user-name')).toHaveTextContent('Jane Doe');
    expect(screen.getByTestId('avatar')).toBeInTheDocument();
  });

  describe('Snapshots', () => {
    it('matches snapshot with full user data', () => {
      const { container } = render(<SearchUserSuggestion user={mockUser} onClick={vi.fn()} />);
      expect(container.firstChild).toMatchSnapshot();
    });

    it('matches snapshot without avatar', () => {
      const userWithoutAvatar = {
        id: 'pk:xyz789' as Pubky,
        name: 'Jane Doe',
      };
      const { container } = render(<SearchUserSuggestion user={userWithoutAvatar} />);
      expect(container.firstChild).toMatchSnapshot();
    });
  });
});
